deployment/kubernetets/local/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acc-deployment
  labels:
    app: acc
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acc
  template:
    metadata:
      labels:
        app: acc
    spec:
      containers:
      - name: acc
        image: localhost:32000/haccsvc:latest
        ports:
        - containerPort: 3000
          name: "acc"
        volumeMounts:
        - name: stenlund
          mountPath: "/mnt/cert"
          readOnly: true
      volumes:
      - name: stenlund
        secret:
          secretName: stenlund-secret
